# pose_estimation

./: CMakeLists.txt  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp
include/: common_functions.h  pose_estimation_2d2d.h  pose_estimation_3d2d.h  pose_estimation_3d3d.h
